backend web, fine scrittura codice, migliore
iniziato lo sviluppo del backend web, fine della scrittura del codice principale, inizio fase finale del progetto, cambiati gli orari del funzionamento dei sensori, rimane da finire l'implementazione dei dati salvati nel database sull'interfaccia web che in generale è perfettamente funzionante anche senza media queries.

Nuova disposizione delle cartelle.

Database: @AndreaCopp
HTML+CSS: @Sho4nGame

Co-Authored-By: AndreaCopp <167347048+AndreaCopp@users.noreply.github.com>
Co-Authored-By: Sho4nGame <169816703+Sho4nGame@users.noreply.github.com>

--- a/web/WebBackend/Servo.html
+++ b/web/WebBackend/Servo.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- prova per il funzionamento del cancello, l'attuale implementazione è nel file FutureLiving.html-->
 <html>
     <head>
         <title>PORTONE</title>
